--- a/Treinamento angular 2/client/index.html
+++ b/Treinamento angular 2/client/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        
+        <base href="/">
         <title>Alurapic</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
@@ -22,6 +22,6 @@
     </head>
     <body>
         <h1 class="text-center">Alurapic</h1>
-        <app></app>
+        <app>carregando...</app>
     </body>
 </html>
